--- a/UI/static/css/style.css
+++ b/UI/static/css/style.css
@@ -16,7 +16,7 @@ img {
 
 .header {
     padding: 10px 20px;
-    background-color: #007bbb;
+    background-color: #333;
 }
 
 .header-text {
@@ -34,7 +34,7 @@ img {
 .content-header {
     margin: 0px 10px;
     padding: 5px 0px;
-    font-size: 20px;
+    font-size: 22px;
     border-bottom: #777 solid 1px;
 }
 
@@ -53,7 +53,7 @@ img {
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 10px;
 }
 
@@ -103,6 +103,15 @@ button:hover {
     color: skyblue;
 }
 
+button.green {
+    background-color: #1b7a3c;
+    border-color: #1b7a3c;
+}
+
+button.green:hover {
+    color: yellowgreen;
+}
+
 button.wide {
     width: 100%;
 }
@@ -130,11 +139,11 @@ dialog[open] {
 
 .dialog-header{
   padding: 20px;
-  background-color: #007bbb;
+  background-color: #333;
   color: #fff;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
-  font-weight: bold;
+  font-size: 24px;
 }
 
 .dialog-contents{
@@ -146,7 +155,7 @@ dialog[open] {
 }
 
 .dialog-footer{
-  padding: 20px;
+  padding: 10px;
   color: #333;
   font-weight: bold;
 }
@@ -162,40 +171,69 @@ dialog[open] {
 
 /* ---------------------- */
 
-.datasets {
+.datasets.grid-container {
     max-height: 30vh;
     overflow-y: scroll;
-    border-top: #777 solid 1px;
-    border-bottom: #777 solid 1px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
 .dataset-container {
     margin-top: 5px;
-    min-width: 200px;
-    max-width: 200px;
-    min-height: 100px;
-    max-height: 200px;
+    min-width: 250px;
+    max-width: 500px;
+    max-height: 400px;
     border: #777 solid 1px;
 }
 
-.dataset-selected {
+.dataset-container.dataset-upload {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+.dataset-container .dataset-upload-container {
+    height: 140px;
+}
+
+.dataset-container .dataset-upload-container .dataset-upload-text {
+    padding: 20px 10px 10px 10px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.dataset-container .dataset-upload-container .dataset-upload-message {
+    padding: 5px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.dataset-container .dataset-upload-container .dataset-upload-plus-text {
+    font-size: 56px;
+    text-align: center;
+}
+
+.dataset-container.dataset-selected {
     outline: solid 3px #007bbb;
 }
 
 .dataset-container .dataset-name {
-    padding: 10px 0px 1px 10px;
-    font-size: 18px;
+    padding: 10px 10px 5px 10px;
+    font-size: 20px;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
 }
 
 .dataset-container .dataset-size, .dataset-container .dataset-type {
     padding-left: 10px;
-    font-size: 9px;
+    font-size: 14px;
 }
 
 .dataset-container .dataset-sample-images {
     margin-top: 10px;
     border-top: #777 solid 1px;
-    max-height: 70px;
+    display: flex;
+    justify-content: center;
 }
 
 .dataset-container .dataset-sample-images img {
@@ -210,10 +248,6 @@ dialog[open] {
 }
 
 .augment-options {
-    max-height: 50vh;
-    overflow-y: scroll;
-    border-top: #777 solid 1px;
-    border-bottom: #777 solid 1px;
     margin-bottom: 10px;
 }
 
@@ -231,6 +265,7 @@ dialog[open] {
 
 .option-container .option-params {
     padding-left: 10px;
+    padding-bottom: 10px;
 }
 
 .option-container .option-params .option-param-container {
@@ -243,4 +278,62 @@ dialog[open] {
     border-bottom: #bbb solid 1px;
 }
 
+.option-container.option-append {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
 
+.option-container.option-append .option-append-container {
+    height: 140px;
+}
+
+.option-append-container .option-append-text {
+    padding: 20px 10px 10px 10px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.option-append-container .option-append-message {
+    padding: 5px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.option-append-container .option-append-plus-text {
+    font-size: 56px;
+    text-align: center;
+}
+
+#augment-choises-dialog .augment-choises {
+    padding: 10px;
+}
+
+#augment-choises-dialog .augment-choises .augment-choise-container {
+    min-width: 200px;
+    max-width: 400px;
+    border: #777 solid 1px;
+}
+
+.augment-choise-container .augment-name {
+    font-size: 18px;
+    margin: 10px 0px 10px 10px;
+    border-bottom: #777 solid 1px;
+}
+
+.augment-choise-container .augment-sample {
+    display: flex;
+    justify-content: center;
+}
+
+.augment-choise-container .augment-sample img {
+    width: 50%;
+    height: 50%;
+}
+
+.augment .augment-execute {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+}
