--- a/UI/static/css/style.css
+++ b/UI/static/css/style.css
@@ -103,6 +103,10 @@ button:hover {
     color: skyblue;
 }
 
+button:focus {
+    outline: none;
+}
+
 button.green {
     background-color: #1b7a3c;
     border-color: #1b7a3c;
@@ -114,6 +118,13 @@ button.green:hover {
 
 button.wide {
     width: 100%;
+}
+
+button.small {
+    padding: 2px;
+    font-size: 10px;
+    border-width: 1px;
+    border-radius: 5px;
 }
 
 /* dialog */
@@ -217,11 +228,21 @@ dialog[open] {
     outline: solid 3px #007bbb;
 }
 
-.dataset-container .dataset-name {
+.dataset-container .dataset-container-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.dataset-container .dataset-container-header .dataset-name {
     padding: 10px 10px 5px 10px;
     font-size: 20px;
     text-overflow: ellipsis;
     overflow-x: hidden;
+}
+
+.dataset-container .dataset-container-header button {
+    margin-right: 5px;
 }
 
 .dataset-container .dataset-size, .dataset-container .dataset-type {
@@ -256,6 +277,16 @@ dialog[open] {
     max-width: 400px;
     min-height: 100px;
     border: #777 solid 1px;
+}
+
+.option-container .option-container-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.option-container .option-container-header button {
+    margin-right: 5px;
 }
 
 .option-container .option-name {
@@ -336,4 +367,40 @@ dialog[open] {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
+}
+
+/* ---------------------- */
+
+.results.grid-container {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
+.results .result-container {
+    margin-top: 5px;
+    min-width: 250px;
+    max-width: 500px;
+    max-height: 400px;
+    border: #777 solid 1px;
+}
+
+.result-container .result-name {
+    padding: 10px 10px 5px 10px;
+    font-size: 20px;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+}
+
+.result-container .result-type, .result-container .result-status {
+    padding-left: 10px;
+    font-size: 14px;
+}
+
+.result-container .result-progress  {
+    margin-top: 20px;
+}
+
+.result-container .result-progress label {
+    font-size: 12px;
+    text-align: center;
+    background-color: skyblue;
 }
