--- a/UI/templates/index.html
+++ b/UI/templates/index.html
@@ -42,14 +42,15 @@
       <div v-if="selected_dataset == null" class="augment-advance-message">Upload or Click your dataset.</div>
       <div v-else class="augment content-box">
         <div class="augment-options grid-container">
-          <div v-for="option_key in selected_augment_options" class="option-container" v-bind:key="option_key">
+          <div v-for="(option_key, idx) in selected_augment_options" class="option-container" v-bind:key="option_key">
             <div class="option-container-header">
-              <div class="option-name">{{augment_option_choises[option_key].name}}</div>
+              <div class="option-name">{{idx + 1}}. {{augment_option_choises[option_key].name}}</div>
               <button v-on:click="deleteAugmentOption(option_key)" class="small">delete</button>
             </div>
             <div class="option-params">
               <div v-for="conf in augment_option_choises[option_key].params" class="option-param-container" v-bind:key="conf.name">
-                <div class="option-param-name">{{conf.name}}</div>
+                  <div v-if="!conf.unit" class="option-param-name">{{conf.name}}</div>
+                  <div v-else class="option-param-name">{{conf.name}} ({{conf.unit}})</div>                
                 <div v-if="conf.type == 'range'" class="range-container">
                   <div class="range-min-container">
                     <label v-bind:for="`${option_key}-${conf.name}-min`" class="range-min-label">min</label>
@@ -59,6 +60,9 @@
                     <label v-bind:for="`${option_key}-${conf.name}-min`" class="range-min-label">max</label>
                     <input type="number" v-bind:name="`${option_key}-${conf.name}-max`" v-bind:label="`${option_key}-${conf.name}-max`" v-bind:max="conf.max" v-bind:min="conf.min" v-bind:step="conf.step" v-model="augment_value[option_key][conf.name]['max']"/>
                   </div>
+                </div>
+                <div v-if="conf.type == 'number'">
+                  <input type="number" v-bind:name="`${option_key}-${conf.name}`" v-bind:max="conf.max" v-bind:min="conf.min" v-bind:step="conf.step" v-model="augment_value[option_key][conf.name]">
                 </div>
                 <div v-if="conf.type == 'select'">
                   <div v-for="choise in conf.choises" v-bind:key="choise">
@@ -121,6 +125,7 @@
           <div class="result-type">type: {{result.type}}</div>
           <div class="result-status">status: {{result.status}}</div>
           <div class="result-progress">
+              <label v-bind:for="result.id">{{result.progress}} %</label>
               <progress v-bind:id="result.id" max="100" v-bind:value="result.progress">{{result.progress}}</progress>
           </div>
           <button class="wide">Download</button>
